plugins {
    id 'org.springframework.boot' version '2.7.18'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'java'
    id 'com.github.ben-manes.versions' version '0.52.0'
}

group = 'no.fintlabs'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

jar {
    enabled = false
}

repositories {
    mavenCentral()
    repositories {
        maven {
            url "https://repo.fintlabs.no/releases"
        }
    }
    mavenLocal()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'


    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'io.netty:netty-resolver-dns-native-macos:4.1.101.Final:osx-aarch_64'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    implementation 'org.hibernate.validator:hibernate-validator'

    implementation 'no.fintlabs:fint-kafka:4.0.1'
    implementation 'no.fintlabs:fint-flyt-kafka:3.1.1'
    implementation 'org.springframework.kafka:spring-kafka'

    implementation 'no.fintlabs:fint-flyt-instance-gateway:6.0.4'
    implementation 'no.fintlabs:fint-flyt-resource-server:5.1.0'

    implementation 'no.fint:fint-altinn-model:2.0.3'

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'cglib:cglib-nodep:3.3.0'
}

test {
    useJUnitPlatform()
}
